# poke.AI

./: .gitignore  EmeraldWatchlist.wch  README.md  convert_dib2png.py  gui.py  roadmap.md  temp
advance_map/: README.txt
advance_map/Ini/: AdvanceMap.ini  EmTilesets.ini  Main.ini  MapDateien.ini  Maps.ini  Musik_de.ini  Musik_en.ini  Musik_fr.ini  Musik_it.ini  Sprachen.ini  Table.Ini  Table_jap.ini  Table_jap_kata.ini  Tilesets.ini  frMain.ini  frMaps.ini  frTilesets.ini
advance_map/Maps/: CLEMENTI-VILLE (0.0).map
ai/: auto_controller.py  gui.py  main.py  mapper.py  path_finder.py  ram_searcher.py  standalone_backend.py
notes/: object_detection_slam_notes.txt  pokemon_rl_notes.txt  reinforcement_learning_notes.txt
object_detection/: add_padding.py  convert_to_keras_csv.py  frame_extrator.py  genetic_algorithm_notes  split_image.py  xml_to_csv.py
ram_interface_dll/: ram_interface_dll.sln
roms/: emerald_original.srm
training_maps/: dewford.DIB  evergrande.DIB  evergrande.DIB.xml  fallarbor.DIB.xml  lilycove.DIB  lilycove.DIB.xml  littleroot.DIB  oldale.DIB  pacifidlog.DIB.xml  rooute102.DIB  route101.DIB  route103.DIB  route106.DIB  route106.DIB.xml  route107.DIB  route108.DIB.xml  route109.DIB  route110.DIB.xml  route111.DIB.xml  route113.DIB  route113.DIB.xml  route116.DIB.xml  route117.DIB  route120.DIB.xml  route121.DIB  route121.DIB.xml  route122.DIB  route123.DIB  route123.DIB.xml  route125.DIB  route125.DIB.xml  route130.DIB  route132.DIB  rustboro.DIB  slateport.DIB  sootopolis.DIB.xml  underwater4.DIB.xml  underwater5.DIB  underwater5.DIB.xml  underwater6.DIB.xml  (+3 more)
vba-rerecording/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in
vba-rerecording/src/common/: CheatSearch.cpp  CheatSearch.h  Makefile.am  Makefile.in  System.cpp  System.h  SystemGlobals.cpp  SystemGlobals.h  Text.cpp  Text.h  Util.cpp  Util.h  inputGlobal.h  lua-engine.cpp  memgzio.c  movie.cpp  movie.h  nesvideos-piece.cpp  nesvideos-piece.h  unzip.cpp  unzip.h  vbalua.h
vba-rerecording/src/filters/: 2xSaI.cpp  Makefile.am  Makefile.in  admame.cpp  bilinear.cpp  filters.h  hq2x.cpp  hq3x32.cpp  hq3x32.h  hq_shared32.cpp  hq_shared32.h  interframe.cpp  interp.h  motionblur.cpp  pixel.cpp  scanline.cpp  simple2x.cpp
vba-rerecording/src/gba/: EEprom.cpp  EEprom.h  Flash.cpp  Flash.h  GBA-arm.cpp  GBA-thumb.cpp  GBA.cpp  GBA.h  GBACheats.cpp  GBACheats.h  GBAGfx.cpp  GBAGfx.h  GBAGlobals.cpp  GBAGlobals.h  GBAMemory.cpp  GBASound.cpp  GBASound.h  GBAinline.h  Makefile.am  Makefile.in  Mode0.cpp  Mode1.cpp  Mode2.cpp  Mode3.cpp  Mode4.cpp  Mode5.cpp  RTC.cpp  RTC.h  Sram.cpp  Sram.h  agbprint.cpp  agbprint.h  armdis.cpp  armdis.h  bios.cpp  bios.h  elf.cpp  elf.h  remote.cpp
vba-rerecording/src/gba/V7/: GBA-arm.h  GBA-thumb.h  GBA.cpp  GBACheats.cpp  GBACpu.h  GBAMemory.cpp  arm-new.h  bios.cpp  thumb.h
vba-rerecording/src/gba/V8/: GBA-arm.cpp  GBA-thumb.cpp  GBA.cpp  GBACheats.cpp  GBACpu.h  GBAMemory.cpp  bios.cpp
vba-rerecording/src/gtk/: Makefile.am  Makefile.in  filters.cpp  filters.h  screenarea.h  sigccompat.h  system.cpp  window.cpp  window.h  windowcallbacks.cpp
vba-rerecording/src/gtk/images/: Makefile.in
vba-rerecording/src/sdl/: Makefile.am  Makefile.in  SDL.cpp  SoundDriver.h  SoundSDL.cpp  SoundSDL.h  TestEmu.cpp  debugger.cpp  expr.cpp  exprNode.cpp
vba_rr/: vba.ini
zmqtest/: client.py  server.py  zmqtest.sln
(+1226 files in other folders)
